<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:orderInCategory="0"
        android:title="@string/find_city"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/setting"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"
        android:title="@string/settings"/>
    <item
        android:id="@+id/menu_more_app"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/more_app"/>
      <item
        android:id="@+id/menu_more_info"
        android:icon="@drawable/ic_menu_more"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/more_info"/>
    <item
        android:id="@+id/use_GPS"
        android:icon="@drawable/ic_menu_mylocation"
        android:orderInCategory="5"
        android:showAsAction="ifRoom|withText"
        android:title="@string/get_loc"/>

</menu>